src/include/layout.h

/**
 *  @author JKM
 *  @brief A reaction network
 *  @details Represents a graph of a (biochemical) reaction network, including
 *  species (nodes) and reactions (edges).
 *  @sa gf_node gf_reaction
 *  \ingroup C_API
 */
typedef struct {
    /// @private
    void* n;
} gf_network;
/**
 *  @author JKM
 *  @brief A species in a model
 *  @details Represents an SBML species. Species are drawn as nodes in the
 *  network graph and are connected by reactions.
 *  @sa gf_reaction
 *  \ingroup C_API
 */
typedef struct {
    /// @private
    void* n;
} gf_node;
/**
 *  @author JKM
 *  @brief A reaction in a model
 *  @details Represents an SBML reaction involving species (nodes) within
 *  the model.
 *  \ingroup C_API
 */
typedef struct {
    /// @private
    void* r;
} gf_reaction;
/**
 *  @author JKM
 *  @brief A 2D cubic Bezier curve
 *  @details Represents a 2D cubic Bezier reaction curve used to
 *  join nodes and reaction centroids.
 *  @sa gf_getCurveCPs
 *  \ingroup C_API
 */
typedef struct {
    /// @private
    void* c;
} gf_curve;
/**
 *  @author JKM
 *  @brief A compartment in a model
 *  @details Represents an SBML compartment, which can contain
 *  species (nodes) and reactions.
 *  \ingroup C_API
 */
typedef struct {
    /// @private
    void* c;
} gf_compartment;
/**
 *  @author JKM
 *  @brief Type which holds layout info
 *  @details This type holds layout info (encoded by the SBML Layout
 *  Extension), and consists of a network (with node/reaction coordinates etc.),
 *  a canvas (for drawing bounds) and SBML level and version information.
 *  @sa gf_processLayout
 *  \ingroup C_API
 */
typedef struct {
    /// @privatesection
    /// Network*
    void* net;
    /// Canvas*
    void* canv;
    /// SBML content
    char* cont;

    // sbml opts
    int level;
    int version;
} gf_layoutInfo;
/**
 *  @author JKM
 *  @brief A point in 2D space
 *  @details Returned by all functions which need to specify a pair of 2D
 *  coordinates.
 *  \ingroup C_API
 */
typedef struct {
    /// x coordinate
    Real x;
    /// y coordinate
    Real y;
} gf_point;
/**
 *  @author JKM
 *  @brief A curve control points
 *  @details This type stores the four points which define a cubic
 *  Bezier curve. The curve touches the start (@ref s) and end (@ref e)
 *  points and is guided by the beginning control point (@ref c1)
 *  and end control point (@ref c2)
 *  \ingroup C_API
 */
typedef struct {
    /// Start
    gf_point s;
    /// Control 1
    gf_point c1;
    /// Control 2
    gf_point c2;
    /// End
    gf_point e;
} gf_curveCP;
/**
 *  @author JKM
 *  @brief Species role in a reaction
 *  @details Represents the SBML species role in a reaction.
 *  Species can be reactants, products, modifiers, etc.
 *  \ingroup C_API
 */
typedef enum {
    GF_ROLE_SUBSTRATE,
    GF_ROLE_PRODUCT,
    GF_ROLE_SIDESUBSTRATE,
    GF_ROLE_SIDEPRODUCT,
    GF_ROLE_MODIFIER,
    GF_ROLE_ACTIVATOR,
    GF_ROLE_INHIBITOR
} gf_specRole;
/** @brief Create a new SBML model
 * @returns The new SBML model
 *  @note Caller must free returned pointer using @ref gf_free
 *  \ingroup C_API
 */
_GraphfabExport gf_SBMLModel* gf_SBMLModel_newp();
// -- Input --

/**
 *  @author JKM
 *  @brief Process the layout info from a document.
 *  @details The layout info holds the network (nodes, reactions, etc.), canvas, and SBML content.
 *  gf_processLayout should be called after loading a network (via e.g. @ref gf_loadSBMLfile).
 *  If the SBML model has layout information, the returned @ref gf_layoutInfo will preserve
 *  this information. Otherwise, it will generate it automatically using the Fruchterman-Reingold
 *  algorithm.
 *
 *  gf_processLayout should be called only once for a loaded model (subsequent calls will have no
 *  effect). To manually re-run the Fruchterman-Reingold algorithm, call @ref gf_doLayoutAlgorithm.
 *  @param[in] lo The SBML model; the layout info is generated from the SBML model
 *  @param[out] l The layout info; pointer to the layout info generated from SBML model is returned
 *  @warning Call @ref gf_freeLayoutInfo to free the returned pointer. Do not call @ref gf_free.
 *  \ingroup C_API
 */
_GraphfabExport gf_layoutInfo* gf_processLayout(gf_SBMLModel* lo);
// -- Configuration --

/**
 * @brief Set the level and version of the SBML
 * @param[out] l The SBML model with layout info
 * @param[in] level The SBML level
 * @param[in] version The SBML version
 *  \ingroup C_API
 */
_GraphfabExport void gf_setModelNamespace(gf_layoutInfo* l, unsigned long level, unsigned long version);
/** @brief Get the network associated with the model
 *  @param[in] l The layout info; contains the network
 *  @return A pointer to the network
 *  @note Caller must free returned pointer using @ref gf_free
 *  \ingroup C_API
 */
_GraphfabExport gf_network* gf_getNetworkp(gf_layoutInfo* l);
/** @brief Get the number of nodes
 *  @param[in] n The network object
 *  \ingroup C_API
 */
_GraphfabExport uint64_t gf_nw_getNumNodes(const gf_network* n);
/** @brief Get the number of reactions
 *  @param[in] n The network object
 *  \ingroup C_API
 */
_GraphfabExport uint64_t gf_nw_getNumRxns(const gf_network* n);
/** @brief Get the number of compartments
 *  @param[in] n The network object
 *  \ingroup C_API
 */
_GraphfabExport uint64_t gf_nw_getNumComps(const gf_network* n);
/** @brief Get the node at index i
 *  @param[in] n The network object
 *  @param[in] i Node index
 *  @return A pointer to the node
 *  @note Caller must free returned pointer using @ref gf_free
 *  \ingroup C_API
 */
_GraphfabExport gf_node* gf_nw_getNodep(gf_network* n, uint64_t i);
/** @brief Get the node with the given id
 *  @param[in] nw The network object
 *  @param[in] id The node id
 *  @return A pointer to the node with the given id; returns NULL if no such node exists
 *  \ingroup C_API
 */
_GraphfabExport gf_node* gf_nw_getNodepFromId(gf_network* nw, const char* id);
/** @brief Get the node at index i
 *  @param[in] n The network object
 *  @param[in] i Node index
 *  @note Caller must free returned pointer using @ref gf_free
 *  \ingroup C_API
 */
_GraphfabExport gf_reaction* gf_nw_getRxnp(gf_network* n, uint64_t i);
/** @brief Did the SBML model include layout?
 *  @return 1 for yes, 0 for no
 *  @param[in] n The network object
 *  \ingroup C_API
 */
_GraphfabExport int gf_nw_isLayoutSpecified(gf_network* nw);
/** @brief Get the centroid of the node
 *  @param[in] n The node object
 *  \ingroup C_API
 */
_GraphfabExport gf_point gf_node_getCentroid(gf_node* n);
/** @brief Get the width of the node
 *  @param[in] n The node object
 *  \ingroup C_API
 */
_GraphfabExport double gf_node_getWidth(gf_node* n);
/** @brief Get the height of the node
 *  @param[in] n The node object
 *  \ingroup C_API
 */
_GraphfabExport double gf_node_getHeight(gf_node* n);
/** @brief Get the id, user frees memory
 *  @param[in] n The node object
 *  \ingroup C_API
 */
_GraphfabExport char* gf_node_getID(gf_node* n);
/** @brief Get the name, client must free memory
 *  @param[in] n The node object
 *  \ingroup C_API
 */
_GraphfabExport const char* gf_node_getName(gf_node* n);
/** @brief Get the id, user frees memory
 *  @param[in] r The reaction object
 *  \ingroup C_API
 */
_GraphfabExport char* gf_reaction_getID(gf_reaction* r);
/** @brief Get the centroid of the reaction
 *  @param[in] r The reaction object
 *  \ingroup C_API
 */
_GraphfabExport gf_point gf_reaction_getCentroid(gf_reaction* r);
/** @brief Get the number of species in the reaction
 *  @param[in] r The reaction object
 *  \ingroup C_API
 */
_GraphfabExport uint64_t gf_reaction_getNumSpec(const gf_reaction* r);
/** @brief Get the number of curves in the reaction
 *  @param[in] r The reaction object
 *  \ingroup C_API
 */
_GraphfabExport uint64_t gf_reaction_getNumCurves(const gf_reaction* r);
/** @brief Get the curve i
 *  @param[in] r The reaction object
 *  @note Caller must free returned pointer using @ref gf_free
 *  \ingroup C_API
 */
_GraphfabExport gf_curve* gf_reaction_getCurvep(const gf_reaction* r, uint64_t i);
/** @brief Get the id, user frees memory
 *  @param[in] c The curve
 *  \ingroup C_API
 */
// _GraphfabExport char* gf_curve_getID(gf_curve* c);

/**
 * @brief Get the role of the species with the given curve
 * @param[in] c The curve
 * @return The index of the matching species in the reaction
 *  \ingroup C_API
 */
_GraphfabExport gf_specRole gf_curve_getRole(gf_curve* c);
/** @brief Get the CPs for the curve
 *  @param[in] c The curve
 *  \ingroup C_API
 */
_GraphfabExport gf_curveCP gf_getCurveCPs(const gf_curve* c);
/** @brief Get the id, user frees memory
 *  @param[in] c The compartment object
 *  \ingroup C_API
 */
_GraphfabExport char* gf_compartment_getID(gf_compartment* c);
/** @brief Get the "upper left" corner
 *  @param[in] c Compartment
 *  \ingroup C_API
 */
_GraphfabExport gf_point gf_compartment_getMinCorner(gf_compartment* c);
/** @brief Get the "lower right" corner
 *  @param[in] c The compartment object
 *  \ingroup C_API
 */
_GraphfabExport gf_point gf_compartment_getMaxCorner(gf_compartment* c);
/** @brief Get the width of the compartment
 *  @param[in] c The compartment object
 *  \ingroup C_API
 */
_GraphfabExport double gf_compartment_getWidth(gf_compartment* c);
/** @brief Get the height of the compartment
 *  @param[in] c The compartment object
 *  \ingroup C_API
 */
_GraphfabExport double gf_compartment_getHeight(gf_compartment* c);
// Transform

/** @brief Fit to the specified window
 *  @details Given a network layout and a window, constructs a 2D affine transform
 *  to fit the network within the window. The 2D affine transform is applied directly to the network.
 *  @param[in] l The layout info object
 *  @param[in] left Left edge of screen (other args similar)
 *  \ingroup C_API
 */
_GraphfabExport void gf_fit_to_window(gf_layoutInfo* l, double left, double top, double right, double bottom);
// -- Processing --

/** @brief Randomize node positions
 *  @param[in] m The layout info; contains the network of nodes and reactions, the coordinates of which will be randomized
 *  \ingroup C_API
 */
_GraphfabExport void gf_randomizeLayout(gf_layoutInfo* m);
// -- Output --

/** @brief Write an SBML file, including layout
 * @returns 0 for success
 * @param[in] filename The output file
 * @param[in] m The SBML model; required since this tool only handles layout
 * @param[in] l The layout info; replaces any currently existing SBML layout in the model in the generated file
 *  \ingroup C_API
 */
_GraphfabExport int gf_writeSBMLwithLayout(const char* filename, gf_SBMLModel* m, gf_layoutInfo* l);
/** @brief Write an SBML file (does not include layout
 * @returns 0 for success
 * @param[in] filename The output file
 * @param[in] m The SBML model; required since this tool only handles layout
 *  \ingroup C_API
 */
_GraphfabExport int gf_writeSBML(const char* filename, gf_SBMLModel* m);
/** @brief String version of writeSBMLwithLayout
 *  @param[in] m The SBML model; required since this tool only handles layout
 *  @param[in] l The layout info; the SBML in string form is written to the layout
 *  @return Raw SBML as UTF-8 string (owned by callee)
 *  \ingroup C_API
 */
_GraphfabExport const char* gf_getSBMLwithLayoutStr(gf_SBMLModel* m, gf_layoutInfo* l);
/** @brief Returns the current version of the library
 *  @return Static string
 *  \ingroup C_API
 */
_GraphfabExport const char* gf_getCurrentLibraryVersion(void);
/** @brief Get the number of vertices in the arrowhead polygon
 *  @param[in] style Arrowhead style number
 *  @return The arrowhead polygon vertex count
 *  \ingroup C_API
 */
_GraphfabExport int gf_arrowheadStyleGetNumVerts(int style);
/** @brief Get the nth vertex of the arrow polygon
 *  @param[in] style Arrowhead style number
 *  @param[in] n The vertex index
 *  @return The nth vertex of the polygon
 *  \ingroup C_API
 */
_GraphfabExport gf_point gf_arrowheadStyleGetVert(int style, int n);
/** @brief Get the number of arrowhead styles
 *  @return The number of arrowhead styles
 *  \ingroup C_API
 */
_GraphfabExport unsigned long gf_arrowheadNumStyles();
/** @brief Set the arrowhead style for a specific role type
 *  @param[in] role Role type
 *  @param[in] style Arrowhead style number
 *  \ingroup C_API
 */
_GraphfabExport void gf_arrowheadSetStyle(gf_specRole role, int style);
/** @brief Get the style for the role type
 *  @param[in] role Role type
 *  \ingroup C_API
 */
_GraphfabExport int gf_arrowheadGetStyle(gf_specRole role);